try to fix unclickable button on mobile 2 update locale command

--- a/src/AppBundle/Resources/public/css/color.css
+++ b/src/AppBundle/Resources/public/css/color.css
@@ -422,6 +422,7 @@ p em,
 .banner2-pager i,
 .banner2-pager,
 #responsive-menu-button2 i,
+.btn-1,
 .header-3 .nav-search .input-dec2 input[type="text"],
 .brand-icons li a i,
 .cart-wrap .cart i, .cart-wrap > a,.cart-wrap > a i
